[package]
name = "common"
version = "0.1.0"
authors = ["Guillaume Galy <guilgaly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
lazy_static = "1.4.0"
regex = "1.4.2"
reduce = "0.1.3" # see https://github.com/rust-lang/rust/issues/68125 for std lib version - not in stable yet
