[package]
name = "day_6"
version = "0.1.0"
authors = ["Guillaume Galy <guilgaly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

common = { path = "../common"}
itertools = "0.9.0"
reduce = "0.1.3" # see https://github.com/rust-lang/rust/issues/68125 for std lib version - not yet stable
